# tangram

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  apps.toml  codebase-health-report-2.md  codebase-health-report.md
.agents/skills/codebase-health/: SKILL.md  scan.sh
.agents/skills/local-replica/: SKILL.md  replica.sh
.agents/skills/systemd-service/: SKILL.md  service.sh
.agents/skills/verify-design-in-ui/: SKILL.md
.claude/skills/local-replica/: SKILL.md  replica.sh
.claude/skills/systemd-service/: SKILL.md  service.sh
.config/: nextest.toml
.github/workflows/: ci.yml
apps/auto-todo/: Cargo.toml
apps/auto-todo/src/: discovery.rs  lib.rs  main.rs  tests.rs
apps/auto-todo/ui/: index.html
apps/feedback/: Cargo.toml
apps/feedback/src/: github.rs  lib.rs  main.rs
apps/feedback/tests/: create_issue.rs
apps/feedback/tests/support/: mod.rs
apps/feedback/ui/: index.html
apps/grocery-cart/: Cargo.toml
apps/grocery-cart/src/: lib.rs
apps/grocery-cart/ui/: index.html
apps/guided-learning/: Cargo.toml
apps/guided-learning/src/: lib.rs  main.rs  schedule.rs  tutor.rs
apps/guided-learning/tests/: gl1_model.rs  gl2_sync_actions.rs  gl3_generate.rs  gl4_evaluate.rs  gl5_crdt_merge.rs  gl6_degrade.rs  gl7_egress.rs  gl8_ui.rs
apps/guided-learning/tests/support/: mod.rs
apps/guided-learning/ui/: index.html
apps/marketplace/: Cargo.toml  README.md
apps/marketplace/seed/: notes.sha256  notes.wit  nutrition.sha256  refresh.sh  registry.sha256
apps/marketplace/src/: lib.rs  main.rs
apps/morning-brief/: Cargo.toml
apps/notes/: Cargo.toml  Dockerfile
apps/nutrition/: Cargo.toml  Dockerfile
apps/nutrition/src/: api.rs  lib.rs  main.rs  strategy.rs
apps/nutrition/src/strategy/: calorieninjas.rs  llm.rs
apps/nutrition/ui/: index.html
apps/registry/: Cargo.toml
apps/shell/: Cargo.toml
apps/shell/src/: main.rs
apps/tangram/: Cargo.toml  README.md
apps/tangram/src/: agents.rs  ingest.rs  lib.rs  mcp_client.rs  reactive.rs
apps/tangram/src/reactive/: grocery.rs
apps/tangram/ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/tangram/ui/src/: agentLink.test.ts  agentLink.ts  agentPopup.test.ts  agentPopup.ts  agentTag.ts  agents.test.ts  agents.ts  agentsView.test.ts  agentsView.ts  api.ts  auth.ts  callout.test.ts  callout.ts  chat.test.ts  chatPanel.ts  createAgentPopup.ts  editor.smoke.test.ts  editor.ts  invocations.test.ts  invocations.ts  links.ts  livePreview.ts  llmChat.ts  main.ts  manage.ts  markdown.ts  mcpClient.ts  modal.ts  objectComplete.test.ts  objectComplete.ts  objectLink.test.ts  objectLink.ts  objectPopup.test.ts  objectPopup.ts  objectTable.test.ts  objectTable.ts  quickOpen.test.ts  quickOpen.ts  recipeImport.test.ts  recipeImport.ts  (+12 more)
cloud/cloudflare/: README.md  build-components.sh  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloud/cloudflare/mcp-core/: Cargo.toml
cloud/cloudflare/mcp-core/src/: lib.rs
cloud/cloudflare/mcp-core/wit/: mcp.wit
crates/tangram/: Cargo.toml
crates/tangram-automation/: Cargo.toml
crates/tangram-automation/src/: broker.rs  decision.rs  egress.rs  lib.rs  preflight.rs  request.rs  runner.rs  script.rs  session.rs  wholefoods.rs
crates/tangram-automation/tests/: session_flow.rs
crates/tangram-automation/tests/fixtures/: amazon_cart_demo.mjs  amazon_cart_demo.script.json  amazon_storage_state.json
crates/tangram-core/: Cargo.toml
crates/tangram-core/src/: action.rs  lib.rs  mcp.rs  store.rs  sync.rs
crates/tangram-core/tests/: rmcp_parity.rs
crates/tangram-core/tests/fixtures/: rmcp-golden.json
crates/tangram-egress/: Cargo.toml
crates/tangram-egress/src/: lib.rs
crates/tangram-host/: Cargo.toml  README.md
crates/tangram-host/src/: accounts.rs  app.rs  audit.rs  auth.rs  authapi.rs  cartfill.rs  config.rs  doc.rs  egress.rs  fetch.rs  gateway.rs  main.rs  mcp.rs  multitenant.rs  oauth.rs  policy.rs  recipe.rs  registry.rs  routes.rs  runtime.rs  scheduler.rs  secrets.rs  tenant.rs  verify.rs
crates/tangram-host/tests/: agent_mcp_egress.rs  artifact_upload.rs  capabilities.rs  cartfill_dispatch.rs  default_view.rs  e2e_cloudflare_sync.rs  egress_enforcement.rs  egress_injection.rs  egress_policy.rs  federated_fleet.rs  float_roundtrip.rs  frame_ancestors.rs  gateway_identity_validate.rs  gateway_lifecycle.rs  guided_learning_egress.rs  marketplace_lifecycle.rs  multi_tenant_lifecycle.rs  registry_lifecycle.rs  resource_limits.rs  tenant_lifecycle.rs  verification.rs
crates/tangram-host/tests/support/: mod.rs
crates/tangram-host/wit/: tangram.wit
crates/tangram-macros/: Cargo.toml
crates/tangram/src/: action.rs  app.rs  guest.rs  http.rs  lib.rs  mcp.rs  store.rs  sync.rs  time.rs  web.rs
crates/tangram/tests/: mcp.rs
deploy/observability/: compose.yml
docs/: RUNTIME_PLAN.md  SDK_DESIGN.md  SYNC_PROTOCOL.md  TOUR.md  test-runtime-report.md
docs/adr/: 0001-wasm-first-sandbox-runtime.md  0002-cloudflare-app-runtime.md  0003-cloudflare-identity.md  0004-secret-resolution-interface.md  0005-egress-credential-injection.md  0006-tenant-isolation-posture.md  0007-shell-build-pipeline-exception.md  0008-egress-call-level-capabilities.md  0009-egress-policy-engine.md  0010-browser-automation-host-capability.md  0011-native-identity.md  0012-llm-proxy-via-agentgateway.md
docs/audits/: marketplace-security-audit.md
docs/design/: agents.md  app-composability-research.md  auth.md  auto-todo.md  embedded-runs.md  fine-grained-egress.md  gateway-observability-identity.md  grocery-cart-gc3-handoff.md  grocery-cart-mcp.md  guided-learning.md  iam-auth.md  manifest-verification-plan.md  morning-brief.md  smart-objects.md  tangram-shell-redesign.md  task-automation-browser.md
docs/security/: tenant-isolation-review.md
scripts/: build-images.sh  e2e-cloudflare-apps.sh  e2e-cloudflare-identity.sh  e2e-cloudflare-sync.sh  e2e-host-oauth.sh  observability-down.sh  observability-up.sh
src/: main.rs  mcp.rs  state.rs  web.rs
ui/: index.html
(+31 files in other folders)
