[package]
name = "tangram-nutrition"
version.workspace = true
edition.workspace = true

[dependencies]
tangram.workspace = true
anyhow.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
uuid.workspace = true

[lib]
name = "nutrition"
