[package]
name = "tangram-nutrition"
version.workspace = true
edition.workspace = true

[dependencies]
tangram.workspace = true
anyhow.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
axum.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lib]
name = "nutrition"
