[package]
name = "tangram-app-tangram"
version.workspace = true
edition.workspace = true

[dependencies]
tangram.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

# Native-only: the binary's runtime. The library also compiles to
# wasm32-wasip2 (the WASM component), which must not pull the server stack.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
anyhow.workspace = true
tokio.workspace = true

[lib]
name = "tangram_app"
# cdylib: `cargo build --lib --target wasm32-wasip2` emits the component.
crate-type = ["lib", "cdylib"]

# cargo-machete false positives: the #[model]/#[actions] proc-macros in
# `tangram-macros` emit absolute `::serde`/`::schemars`/`::automerge`/
# `::autosurgeon` paths, so the app genuinely needs these as direct deps
# even though no source file contains an explicit `use` of them.
[package.metadata.cargo-machete]
ignored = ["automerge", "autosurgeon", "schemars", "serde"]
