# The browser + credential automation substrate (host-side; NOT wasm-clean).
# Native-only: tokio + reqwest + a supervised browser driver. tangram-core and
# every WASM component stay browser-unaware — only the native host links this.
# See docs/design/task-automation-browser.md and ADR-0010.
[package]
name = "tangram-automation"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
