[package]
name = "tangram-host"
version.workspace = true
edition.workspace = true

[dependencies]
tangram.workspace = true
tangram-egress.workspace = true

anyhow.workspace = true
async-trait.workspace = true
automerge.workspace = true
axum.workspace = true
base64.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
notify.workspace = true
rand.workspace = true
reqwest.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
tempfile.workspace = true
