[package]
name = "tangram"
version.workspace = true
edition.workspace = true

# The crate compiles for two worlds (ADR-0001):
# - native: the full tokio/axum host (App, web, sync, MCP surfaces);
# - wasm32-wasip2: the guest side of a Tangram component — model/actions/
#   store/dispatch plus the `tangram:app` world adapter (`export_component!`),
#   with NO server stack at all.
[dependencies]
tangram-macros.workspace = true

anyhow.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
base64.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rmcp.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
# Only the runtime-independent sync primitives (watch channels) — supported
# on wasm; no runtime, no I/O.
tokio = { version = "1", default-features = false, features = ["sync"] }
wit-bindgen.workspace = true
