[package]
name = "tangram"
version.workspace = true
edition.workspace = true

# The crate compiles for two worlds (ADR-0001):
# - native: the full tokio/axum host (App, web, sync, MCP surfaces) layered
#   over the portable `tangram-core`, which owns the action registry, store,
#   sync sessions, and the MCP protocol itself (no rmcp here);
# - wasm32-wasip2: the guest side of a Tangram component — model/actions/
#   store/dispatch plus the `tangram:app` world adapter (`export_component!`),
#   with NO server stack at all.
[dependencies]
tangram-core.workspace = true
tangram-macros.workspace = true

anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
automerge.workspace = true
axum.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen.workspace = true

[dev-dependencies]
# The MCP parity suite (tests/mcp.rs) defines its own #[model] app; the
# macro expansion names these the same way app crates do.
autosurgeon.workspace = true
schemars.workspace = true
